# im

im_server/: CMakeLists.txt
im_server(access)/src/DataBaseLib/: CMakeLists.txt  DataBaseLib.cpp  DatabaseMini.cpp  DatabaseMini.h  DatabaseMini.pc  DatabaseWeb.cpp  DatabaseWeb.pc  MysqlLib.cpp  proc_make64.sh  stdafx.cpp  stdafx.h
im_server(access)/src/Mini139OnlineManager/: AppManager.cpp  BusinessAddModifyOnlineUser.cpp  BusinessAddModifyOnlineUser.h  BusinessDelOnlineUser.h  BusinessGetUserFullInfo.h  BusinessGetUserLinkInfo.h  BusinessGetUserStatus.cpp  BusinessGetUserStatus.h  BusinessImServerShutdown.h  BusinessNotifyRelogin.cpp  BusinessNotifyRelogin.h  BusinessSearchOnlineUser.h  CMakeLists.txt  OnlineManager.cpp  ThreadManager.h  stdafx.cpp
im_server(access)/src/MiniIM/: AppManager.cpp  BusiCacheInterface.h  BusiGetSrvStatusLst.h  BusiHeartTick.cpp  BusiHeartTick.h  BusiLogin.cpp  BusiLogin.h  BusinessExIMSrv.cpp  BusinessFamilyManager.cpp  BusinessFriendManager.cpp  BusinessFriendManager.h  BusinessOfflineMsg.cpp  BusinessRouterUserPacket.cpp  BusinessServerMsg.cpp  BusinessServerMsg.cpp.bak  BusinessWebIM.cpp  BusinessWebIM.h  BusinessWebMsg.cpp  CMakeLists-accessserver.txt  CMakeLists.txt  ClientService.cpp  ConnBusiControl.cpp  ConnBusiControl.h  CsQueue.cpp  Family.cpp  Family.h  Mini139Server.cpp  ThreadManager.cpp  ThreadMsgNotify.cpp  User.cpp  User.h  UserManager.cpp  UserManager.h  zmqthread.cpp  zmqthread.h
im_server(access)/src/MiniWebMsgNotify/: AppManager.cpp  AppManager.h  BusiMCheck.cpp  BusiMCheck.h  BusinessOperationMsg.cpp  BusinessOperationMsg.h  CMakeLists.txt  MiniNotifyService.cpp  MiniNotifyService.h  MobileMsgCheck.cpp  MobileMsgCheck.h  ThreadManager.cpp  ThreadManager.h  WebMsgCheck.cpp  WebMsgCheck.h  stdafx.cpp
im_server(branch)/: CMakeLists.txt
im_server(branch)/common/: BaseUdpTrans.h  BusinessExGSrv.cpp  CMakeLists.txt  ConfigDef.h  ConfigInfo.cpp  ConfigInfo.h  Function.cpp  Function.h  GlobalBusi.cpp  GlobalBusiControl.cpp  HashList.h  HashTable.h  IniFile.cpp  JsonParse.cpp  Log.cpp  RouterBusiness.cpp  SyncEvent.h  SyncSemaphore.cpp  Utility.h  WinCommonForLinux.cpp  XmppSession.cpp  XmppSession.h  ZObjectPool.cpp  atlTime.h  des.cpp  des.h  global_cached.hpp  httpclient.h  improtocol.pb.cc  improtocol.pb.h  md5.cpp  md5.h  mfcstr.h  msgnotifyinner.pb.h
im_server(branch)/config/: Config.ini  Config_online_main.ini
im_server(branch)/hessian/: UploadSubMerchantActionServiceProxy.cpp
im_server(branch)/hessian/LogInterface/: ResultInfo.h  SubMerchantAction.h
im_server(branch)/hessian/hessian/: Hessian1InputStream.h  Hessian1OutputStream.h  HttpConnection.h  hessianLogi.h  types.h
im_server(branch)/include/: ClientProtocol.h  DataBaseLib.h  MiniAppNetwork.h  PublicType.h  protocol.h  servicedef.h
im_server(branch)/include/hiredis-vip/: command.h  hircluster.h  read.h
im_server(branch)/include/pb/: improtocol.proto  msgnotifyinner.proto
im_server(branch)/jabberd/: CMakeLists.txt  ac-stdint.h  config.h
im_server(branch)/jabberd/.deps/: c2s-address.Po  c2s-authreg.Po  c2s-c2s.Po  c2s-jabberd.Po  c2s-pbx_commands.Po  c2s-sm.Po
im_server(branch)/jabberd/c2s/: CMakeLists.txt  bind.cpp  c2s.cpp  c2s.h  main.cpp  pbx_commands.cpp  sm.cpp
im_server(branch)/jabberd/mio/: Makefile  mio.h  mio_poll.h  mio_select.h
im_server(branch)/jabberd/sx/: Makefile.in  callback.cpp  client.cpp  error.cpp  io.cpp  server.cpp
im_server(branch)/jabberd/util/: nad.h
im_server(branch)/lib/: libmemcached.so.11  libmysqlpp.so.3
im_server(branch)/mysql/test/: CMakeLists.txt  QueryUser.cpp
im_server(branch)/shell/: build.sh  immonitor  imstart
im_server(branch)/src/DataBaseLib/: DataBaseLib.cpp  DatabaseFamily.pc  DatabaseMini.h  DatabaseMini.pc  DatabaseWeb.h  DatabaseWeb.pc  MysqlLib.h
im_server(branch)/src/MiniIM/: AppManager.cpp  AppManager.h  BusiCacheInterface.cpp  BusiCacheInterface.h  BusiGetSrvStatusLst.cpp  BusiHeartTick.cpp  BusiHeartTick.h  BusiLogin.cpp  BusiLogin.h  BusiMCheck.cpp  BusiMCheck.h  BusinessExIMSrv.cpp  BusinessFamilyManager.cpp  BusinessFamilyManager.h  BusinessFileTrans.cpp  BusinessFriendManager.cpp  BusinessFriendManager.h  BusinessMobileMsg.h  BusinessOfflineMsg.h  BusinessRouterUserPacket.cpp  BusinessServerMsg.h  BusinessWebIM.cpp  BusinessWebIM.h  CMakeLists.txt  ClientService.cpp  ClientService.h  ConnBusi.h  CsQueue.h  HttpInterface.cpp  HttpInterface.h  ThreadManager.cpp  ThreadMsgNotify.cpp  User.cpp  User.h  UserManager.cpp  jabberdIm.cpp  jabberdIm.h  kafukaProducer.h  stdafx.cpp  zmqthread.cpp  (+1 more)
im_server(branch)/src/Miniappnetwork/: CMakeLists.txt  ZAppNetwork.cpp  ZAppNetwork.h
im_server(branch)/src/Mininettrans/: ZTcpComm.cpp  ZUdpComm.cpp  ZUdpCommExt.cpp
im_server/common/: Business.h  BusinessExGSrv.h  ConfigDef.h  ConfigInfo.cpp  ConfigInfo.h  Function.cpp  Function.h  GlobalBusi.h  GlobalBusiControl.h  HashList.cpp  IniFile.h  PacketBuffer.cpp  RouterBusiness.cpp  RouterBusiness.h  SyncCritical.h  SyncSemaphore.h  Utility.cpp  WinCommonForLinux.h  ZSignalQueue.cpp  ZSignalQueue.h  httpclient.cpp  md5.cpp  md5.h  msgnotifyinner.pb.cc
im_server/config/: Config.ini  Config_online_reverse.ini  webmsg.ini
im_server/hessian/: CMakeLists.txt
im_server/include/: ClientProtocol.h  DataBaseLib.h  DataBaseStruct.h  MiniNetTrans.h  PublicType.h  SrvFrameProtocol.h  StdPublic.h  protocol.h
im_server/include/hiredis-vip/: net.h
im_server/mysql/: MysqlConnPool.h
im_server/shell/: imkill  imlps  imstart
im_server/src/: CMakeLists.txt
im_server/src/DataBaseLib/: DataBaseLib.cpp  DatabaseFamily.h  DatabaseMini.h  DatabaseMini.pc
im_server/src/MiniIM/: AppManager.cpp  AppManager.h  BusiCacheInterface.cpp  BusiHeartTick.cpp  BusiLogin.cpp  BusiLogin.h  BusinessExIMSrv.cpp  BusinessExIMSrv.h  BusinessFriendManager.cpp  BusinessFriendManager.h  BusinessMobileMsg.cpp  BusinessServerMsg.cpp  BusinessWebIM.cpp  BusinessWebIM.h  BusinessWebMsg.h  CMakeLists.txt  FileTransport.cpp  HttpInterface.cpp  HttpInterface.h  MiniIMService.h  User.cpp  (+9 more)
im_server/zookeeper/: ZookeeperClient.cpp
(+3021 files in other folders)
